# radio-cortex

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
agents/hunter/: agent.py
agents/librarian/: agent.py
api/: main.py
api/routes/: health.py  tracks.py
config/: settings.py
docs/guides/: testing.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_track_embeddings.py
models/: __init__.py  artist.py  database.py  license.py  track.py  track_embedding.py
scripts/: backup.sh  deploy.sh  init_db.sql  monitor.sh  seed_db.py  setup-server.sh
