[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radio-cortex"
version = "0.1.0"
description = "AI-powered curation agents for Creative Commons music"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "music", "curation", "creative-commons", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",          # PostgreSQL async driver
    "psycopg2-binary>=2.9.9",   # PostgreSQL sync driver
    "pgvector>=0.2.3",          # Vector extension
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "feedparser>=6.0.10",
    "yt-dlp>=2023.11.16",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.3",
    "sentence-transformers>=2.2.2",
    "groq>=0.4.0",              # Groq API client
    "redis>=5.0.0",
    "celery>=5.3.0",
    "mutagen>=1.47.0",          # Audio metadata
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.6",              # Linting + formatting
    "mypy>=1.7.0",              # Type checking
    "pre-commit>=3.5.0",
    "black>=23.11.0",
    "isort>=5.12.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
hunter = "agents.hunter:main"
librarian = "agents.librarian:main"
compliance = "agents.compliance:main"
tastemaker = "agents.tastemaker:main"
cortex = "orchestrator:main"

[project.urls]
Homepage = "https://github.com/yourusername/radio-cortex"
Documentation = "https://radio-cortex.readthedocs.io"
Repository = "https://github.com/yourusername/radio-cortex"
Issues = "https://github.com/yourusername/radio-cortex/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api*", "models*", "services*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=agents",
    "--cov=api",
    "--cov=models",
    "--cov=services",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
    "-v",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["B011"]      # Allow assert False in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "feedparser",
    "yt_dlp",
    "mutagen.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100